# svxlink

src/async/: CMakeLists.txt
src/async/core/: AsyncTcpClientBase.cpp
src/async/glib/: AsyncGlibApplication.cpp  AsyncGlibApplication.h  AsyncGlibDnsLookupWorker.cpp  AsyncGlibDnsLookupWorker.h  CMakeLists.txt
src/echolib/: EchoLinkDispatcher.cpp  EchoLinkQso.cpp
src/qtel-gtk4/: meson.build  qtel.sh  uninstall.sh
src/qtel-gtk4/data/: org.svxlink.Qtel.desktop.in  org.svxlink.Qtel.gschema.xml
src/qtel-gtk4/po/: LINGUAS
src/qtel-gtk4/resources/: shortcuts.ui
src/qtel-gtk4/src/: MsgHandler.cpp  main.cpp  qtel-application.cpp  qtel-application.h  qtel-call-dialog.cpp  qtel-call-dialog.h  qtel-preferences.cpp  qtel-window.cpp  settings.cpp  settings.h  station-list-model.cpp  vox.cpp  vox.h
src/svx-gtk4/: build.sh  install.sh  meson.build  run.sh
src/svx-gtk4/data/: gschemas.compiled  org.svxlink.Qtel.desktop.in  org.svxlink.Qtel.metainfo.xml.in
src/svx-gtk4/resources/: qtel.gresource.xml
src/svx-gtk4/src/: main.cpp  qtel-call-dialog.h  qtel-preferences.cpp  qtel-preferences.h  qtel-window.cpp  qtel-window.h  station-list-model.h  station-object.cpp  station-object.h  vox.cpp  vox.h
